<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_dashboard">

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.chakkimitra.app.ui.dashboard.DashboardFragment"
        android:label="@string/nav_dashboard"
        tools:layout="@layout/fragment_dashboard">
        <action
            android:id="@+id/action_dashboard_to_new_order"
            app:destination="@id/navigation_new_order" />
        <action
            android:id="@+id/action_dashboard_to_customers"
            app:destination="@id/navigation_customer_list" />
        <action
            android:id="@+id/action_dashboard_to_credit"
            app:destination="@id/navigation_credit_management" />
    </fragment>

    <fragment
        android:id="@+id/navigation_new_order"
        android:name="com.chakkimitra.app.ui.order.NewOrderFragment"
        android:label="@string/nav_new_order"
        tools:layout="@layout/fragment_new_order">
        <action
            android:id="@+id/action_new_order_to_dashboard"
            app:destination="@id/navigation_dashboard"
            app:popUpTo="@id/navigation_dashboard"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/navigation_customer_list"
        android:name="com.chakkimitra.app.ui.customer.CustomerListFragment"
        android:label="@string/nav_customers"
        tools:layout="@layout/fragment_customer_list">
        <action
            android:id="@+id/action_customer_list_to_detail"
            app:destination="@id/navigation_customer_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_customer_detail"
        android:name="com.chakkimitra.app.ui.customer.CustomerDetailFragment"
        android:label="@string/cust_details"
        tools:layout="@layout/fragment_customer_detail">
        <argument
            android:name="customerId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/navigation_credit_management"
        android:name="com.chakkimitra.app.ui.credit.CreditManagementFragment"
        android:label="@string/nav_credit"
        tools:layout="@layout/fragment_credit_management" />

    <fragment
        android:id="@+id/navigation_reports"
        android:name="com.chakkimitra.app.ui.reports.ReportsFragment"
        android:label="@string/nav_reports"
        tools:layout="@layout/fragment_reports" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.chakkimitra.app.ui.settings.SettingsFragment"
        android:label="@string/nav_settings"
        tools:layout="@layout/fragment_settings" />
</navigation>
